# rust_send_discord

./: Cargo.toml  Dockerfile
src/: main.rs
