[package]
name = "rust_send_discord"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.1", features = ["full"] }
dotenvy = "0.15.7"
serde_json = "1.0"
chrono = "0.4.40"
anyhow = "1.0.97"
tracing = "0.1"
tracing-subscriber = "0.3"
